# fixposition-sdk

./: .gitignore
ai-docs/learnings/: 2026-05-19_mcap-serialization-compatibility.md  2026-05-19_ros2-build-and-rosbag-workflow.md
ai-docs/plans/: 2026-05-18_adding-wgs84-poses.md  2026-05-19_image-rotation-and-jpeg-export.md  2026-05-19_mcap-export-and-cross-bag-merge.md  plan-navsatfixDerivation.prompt.md
custom-instructions/: README.md
fpsdk_apps/fpltool/: fpltool_extract.cpp  fpltool_opts.hpp
fpsdk_ros2/: CMakeLists.txt
fpsdk_ros2/include/fpsdk_ros2/: bagwriter.hpp  ros1.hpp
fpsdk_ros2/include/fpsdk_ros2/ext/: msgs.hpp
fpsdk_ros2/src/: bagwriter.cpp
fpsdk_ros2/test/: bagwriter_test.cpp
